--- a/Foxplore/Foxplore/appsettings.json
+++ b/Foxplore/Foxplore/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+        "DefaultConnection": "Data source=Foxplore.db"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
